css/style.scss
---
---

@import "./variables.scss";
@import "./mixins.scss";

@import "./parts/globals.scss";
@import "./parts/navbar.scss";
@import "./parts/dropdown.scss";

/*
This section will be all about DARK MODE
*/
.dark-mode {
	code.language-plaintext {
		background-color: #2c292d;
		color: #ff6188;
	}

	pre {
		background-color: #2c292d;
		color: #ddd;
		border-color: #333;
	}

	a {
		color: #8ab4f8;
		// color: #48dbfb;
		// color: #0fbcf9;
		&:hover {
			color: #e9ebee;
		}
	}

	.breadcrumb {
		background-color: #0b0b0b;
		.active {
			color: #888;
		}
	}
}

#darkmode-icon {
	height: 25px;
	vertical-align: middle;
}
/* a.dark-mode {
	color: #f6f8f9;
} */

/* other stuff that sschr15 made and things */

.nav li a img {
	height: 30px;
}
span {
	padding: 0 8px 0 8px;
}
code span {
	padding: 0;
}
.container img.wiki {
	max-width: 100%;
}
li a span img.download-icon {
	float: right;
	height: 20px;
}
li ul li a span {
	padding: 0 0 0 0;
}
div.itemThing div {
	cursor: pointer;
	width: auto;
	position: relative;
}
.hissiemote {
	opacity: 1;
	transition: 0.5s ease;
	backface-visibility: hidden;
	height: auto;
}
.overlayCopy {
	transition: 0.5s ease;
	opacity: 0;
	position: absolute;
	top: 0;
	left: 50%;
	transform: translate(-50%, -400%);
	text-align: center;
	font-weight: bold;
}
div.itemThing div:hover .hissiemote {
	opacity: 0.2;
}
div.itemThing div:hover .overlayCopy {
	opacity: 1;
}
#printLogo {
	position: relative;
	width: 25px;
	height: 25px;
	cursor: pointer;
}

/* ok back to your regularly scheduled content */

a {
	transition: all 0.3s;
}

/*	FORMS */
body:not(.dark-mode) .form-control {
	border: 2px solid #cbd0d3;
	border-radius: 0;
	padding: 0 25px;
	line-height: 45px;
	height: 45px;
}

/*	EXTRA CLASSES */
@import "./parts/utilities/spacing.scss";
@import "./parts/utilities/fonts.scss";
@import "./parts/utilities/colors.scss";
@import "./parts/utilities/backgrounds.scss";
@import "./parts/utilities/images.scss";

/*	COLORS */

.dark-bg {
	&,
	a,
	a:hover {
		color: #fff;
	}
}

@import "./parts/buttons.scss";
@import "./parts/details.scss";
@import "./parts/section.scss";
@import "./parts/hero.scss";
@import "./parts/service.scss";
@import "./parts/blog.scss";
@import "./parts/menu_grid.scss";
@import "./parts/toc.scss";

.mod_icon {
	height: 150px;
}

.profile_pic {
	height: 150px;
}

#ladysnake_logo {
	vertical-align: middle;
	height: 100%;
}

.wiki {
	margin-top: 40px;
	margin-bottom: 40px;
}

.h1-wiki-icon {
	height: 48px;
	image-rendering: crisp-edges;
	vertical-align: middle;
	margin: 20px 0 20px 0;
	display: inline-block;
}

.h3-wiki-icon {
	height: 24px;
	image-rendering: crisp-edges;
	margin: 10px 0 1px 5px;
	display: inline-block;
	vertical-align: bottom;
}

.p-wiki-icon {
	height: 18px;
	image-rendering: crisp-edges;
	margin: 10px 0 1px 0;
	display: inline-block;
	vertical-align: bottom;
}

.pt-3-half {
	padding-top: 1.4rem;
}

.table-buttons {
	width: 12rem;
}

.recipe {
	height: 160px;
	image-rendering: crisp-edges;
	margin-top: 10px;
}

.h3,
h3 {
	font-size: 24px;
	display: inline-block;
	margin: 10px 0 5px 0;
}

.h2,
h2 {
	font-size: 30px;
	margin: 20px 0 10px 0;
	border-bottom: solid 1px black;
}

.h1,
h1 {
	margin: 20px 10px 20px 0;
	display: inline-block;
	vertical-align: middle;
}

.home {
	border-bottom: 0;
	text-align: center;
}

/* DATAPACK GENERATION */

@import "./parts/tables.scss";

.project-links {
	margin-bottom: 3rem;
	font-size: 150%;
	font-weight: bold;

	img {
		width: 3rem;
		height: 3rem;
		margin-right: 1rem;
	}
}

@import "datapack";

